--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@ import matplotlib.pyplot as plt
 import numpy as np
 import matplotlib as mpl
 import time
+import shutil
+shutil.rmtree('/lib/python3.11/site-packages/matplotlib_pyodide')
+shutil.copytree('/mount_dir', '/lib/python3.11/site-packages/matplotlib_pyodide')
 
 mpl.use("module://matplotlib_pyodide.html5_canvas_backend")
 
